Make dependencies flat